adding printing in c, cleaned up some things

--- a/test/makefile
+++ b/test/makefile
@@ -81,12 +81,14 @@ cisurf/load: cisurf/test_loadmesh.o ../src/cisurf/cisurf_load_mesh.o ../src/cisu
             ../src/cisurf/cisurf_plots.o $(FEND)
 	cd ./build && ./test_loadmesh
 
-cisurf/skeltri: cisurf/test_skeltri.o ../src/cisurf/cisurf_load_mesh.o ../src/cisurf/cisurf_plots.o ../src/cisurf/cisurf_skeltri.o
+cisurf/skeltri: cisurf/test_skeltri.o ../src/cisurf/cisurf_load_mesh.o ../src/cisurf/cisurf_plots.o \
+		../src/cisurf/cisurf_skeltri.o ../src/common/cprini.o
 	mkdir -p build
 	$(CC) -o build/test_skeltri cisurf/test_skeltri.o \
             ../src/cisurf/cisurf_load_mesh.o \
             ../src/cisurf/cisurf_plots.o \
-            ../src/cisurf/cisurf_skeltri.o $(FEND)
+            ../src/cisurf/cisurf_skeltri.o \
+			../src/common/cprini.o $(FEND)
 	cd ./build && ./test_skeltri
 
 
