--- a/test/makefile
+++ b/test/makefile
@@ -82,13 +82,13 @@ cisurf/load: cisurf/test_loadmesh.o ../src/cisurf/cisurf_load_mesh.o ../src/cisu
 	cd ./build && ./test_loadmesh
 
 cisurf/skeltri: cisurf/test_skeltri.o ../src/cisurf/cisurf_load_mesh.o ../src/cisurf/cisurf_plots.o \
-		../src/cisurf/cisurf_skeltri.o ../src/common/cprini.o
+		../src/cisurf/cisurf_skeltri.o ../src/common/cprini_long.o
 	mkdir -p build
 	$(CC) -o build/test_skeltri cisurf/test_skeltri.o \
             ../src/cisurf/cisurf_load_mesh.o \
             ../src/cisurf/cisurf_plots.o \
             ../src/cisurf/cisurf_skeltri.o \
-			../src/common/cprini.o $(FEND)
+			../src/common/cprini_long.o $(FEND)
 	cd ./build && ./test_skeltri
 
 
