enable ci for linux mex file

--- a/.github/workflows/mex.yml
+++ b/.github/workflows/mex.yml
@@ -5,8 +5,7 @@ jobs:
     name: ${{ matrix.os }}
     strategy:
       matrix:
-        #os: [ubuntu-latest, windows-latest, macos-latest]
-        os: [windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out repository
