--- a/.github/workflows/mex.yml
+++ b/.github/workflows/mex.yml
@@ -33,7 +33,6 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew install gfortran
-          ln -s $(which gfortran-14) $(dirname $(which gfortran-14))/gfortran
           sed 's/\/Applications\/MATLAB_R\*/\/Users\/runner\/hostedtoolcache\/MATLAB\/2023.2.999\/arm64\/MATLAB.app/' make.inc.macos_arm64.gnu > make.inc
           sed -i -e 's/MEXLIBS += \$(MLBLAS.*/MEXLIBS = `gfortran --print-file-name libquadmath.a` `gfortran --print-file-name libstdc++.a` `gfortran --print-file-name libatomic.a` `gfortran --print-file-name libgfortran.a` `gfortran --print-file-name libgomp.a` `gfortran --print-file-name libgcc.a` -ld_classic -lmwblas -lmwlapack/' makefile
           make matlab
@@ -53,3 +52,5 @@ jobs:
       - name: Setup tmate session
         if: ${{ failure() }}
         uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
